comments and env vars

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ############### App Env ###############
 DB_USER=dev
 DB_PASSWORD=dev
+API_SECRET_KEY=mys3cr3tk3y
 ############### DB Env ###############
 MYSQL_DATABASE=flask_app
 MYSQL_USER=dev
