--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: tenhaus/get-release-or-tag@v2
         id: tag
-      - name: docker login
-        run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag $DOCKER_USER/$DOCKER_IMAGE:${{ steps.tag.outputs.tag }}
       - name: Docker Push
