--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{secrets.DOCKER_USER}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag $DOCKER_USER/$DOCKER_IMAGE:${{ steps.tag.outputs.tag }}
       - name: Docker Push
-        run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.tag.outputs.tag }}
+        run: docker push $DOCKER_USER/$DOCKER_IMAGE:${{ steps.tag.outputs.tag }}
