--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: tenhaus/get-release-or-tag@v2
-        id: tag
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{secrets.DOCKER_USER}}
           password: ${{secrets.DOCKER_PASSWORD}}
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$DOCKER_IMAGE:${{ steps.tag.outputs.tag }}
+        run: docker build . --file Dockerfile --tag $DOCKER_USER/$DOCKER_IMAGE:${{env.RELEASE_VERSION}}
       - name: Docker Push
-        run: docker push $DOCKER_USER/$DOCKER_IMAGE:${{ steps.tag.outputs.tag }}
+        run: docker push $DOCKER_USER/$DOCKER_IMAGE:${{env.RELEASE_VERSION}}
