--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,12 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USER}}
           password: ${{secrets.DOCKER_PASSWORD}}
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$DOCKER_IMAGE:${{env.RELEASE_VERSION}}
-      - name: Docker Push
-        run: docker push $DOCKER_USER/$DOCKER_IMAGE:${{env.RELEASE_VERSION}}
+      - name: Build and push the Docker image
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: |
+            $DOCKER_USER/$DOCKER_IMAGE:latest
+            $DOCKER_USER/$DOCKER_IMAGE:${{env.RELEASE_VERSION}}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
