Add SonarCloud test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,8 @@ name: Build docker image and publish it to Docker Hub
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
-    types: [opened, synchronize, reopened]
+    tags:
+      - '*'
 
 env:
   DOCKER_USER: ${{secrets.DOCKER_USER}}
@@ -14,18 +12,6 @@ env:
   DOCKER_IMAGE: ${{secrets.DOCKER_IMAGE}}
 
 jobs:
-  sonarcloud:
-    name: SonarCloud
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build--push-image-to-docker-hub:
     runs-on: ubuntu-latest
     steps:
