--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,10 @@ jobs:
           username: ${{secrets.DOCKER_USER}}
           password: ${{secrets.DOCKER_PASSWORD}}
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$DOCKER_IMAGE:${{ github.sha }}
+        run: |
+          docker build . --file Dockerfile --tag $DOCKER_USER/$DOCKER_IMAGE:${{ github.sha }}
+          docker build . --file Dockerfile-ngnx --tag $DOCKER_USER/nginx-sidecar:${{ github.sha }}
       - name: Docker Push
-        run: docker push $DOCKER_USER/$DOCKER_IMAGE:${{ github.sha }}
+        run: |
+          docker push $DOCKER_USER/$DOCKER_IMAGE:${{ github.sha }}
+          docker push $DOCKER_USER/nginx-sidecar:${{ github.sha }}
