--- a/default.conf
+++ b/default.conf
@@ -7,9 +7,11 @@ server {
         charset utf-8;
 
 
-location /static {
-        alias /usr/share/nginx/html/static;
-}
+location ~ ^/static/((css/|fonts/|js/).*)$ {
+     alias /usr/share/nginx/html/static/$1;
+     access_log off;
+     expires max;
+ }
 
 location / {
 
