--- a/default.conf
+++ b/default.conf
@@ -1,16 +1,25 @@
 server {
 
-        root /usr/src/app/;
+        root /usr/share/nginx/html/static/;
 
         listen 80;
         server_name _;
         charset utf-8;
 
 
-location ~ ^/static/((css/|fonts/|js/).*)$ {
+location ~ ^/static/((|fonts/|js/).*)$ {
      alias /usr/share/nginx/html/static/$1;
-     access_log off;
+#      access_log off;
      expires max;
+     charset UTF-8;
+}
+
+location ~ ^/static/((css/).*)$ {
+     alias /usr/share/nginx/html/static/css/$1;
+#      access_log off;
+     expires max;
+     charset UTF-8;
+     charset_types text/css;
  }
 
 location / {
