--- a/default.conf
+++ b/default.conf
@@ -22,9 +22,9 @@ location ~ ^/static/((css/).*)$ {
      charset_types text/css;
  }
 
-location / {
+location ~ /(.*) {
 
-        proxy_pass http://localhost:5000;
+        proxy_pass http://localhost:5000/$1;
         
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
