--- a/default.conf
+++ b/default.conf
@@ -7,24 +7,27 @@ server {
         charset utf-8;
 
 
-location ~ ^/static/((|fonts/|js/).*)$ {
+location ~ ^/static/((css/|fonts/|js/).*)$ {
      alias /usr/share/nginx/html/static/$1;
 #      access_log off;
      expires max;
      charset UTF-8;
 }
 
-location ~ ^/static/((css/).*)$ {
-     alias /usr/share/nginx/html/static/css/$1;
-#      access_log off;
-     expires max;
-     charset UTF-8;
-     charset_types text/css;
- }
+location / {
 
-location ~ /(.*) {
+        proxy_pass http://localhost:5000;
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        client_max_body_size 5M;
+        }
+}
 
-        proxy_pass http://localhost:5000/$1;
+location /add {
+
+        proxy_pass http://localhost:5000/add;
         
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
