--- a/default.conf
+++ b/default.conf
@@ -23,9 +23,8 @@ location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         client_max_body_size 5M;
         }
-}
 
-location /add {
+location /add/ {
 
         proxy_pass http://localhost:5000/add;
         
@@ -35,3 +34,4 @@ location /add {
         client_max_body_size 5M;
         }
 }
+
