--- a/default.conf
+++ b/default.conf
@@ -1,28 +1,20 @@
 server {
-
         root /usr/share/nginx/html/static/;
-
         listen 80;
         server_name _;
         charset utf-8;
 
-
 location ~ ^/static/((css/|fonts/|js/).*)$ {
      alias /usr/share/nginx/html/static/$1;
-#      access_log off;
+     access_log off;
      expires max;
      charset UTF-8;
 }
-
 location / {
-
         proxy_pass http://localhost:5000;
-        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         client_max_body_size 5M;
         }
-
 }
-
