--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -1,4 +1,7 @@
 FROM nginx:alpine
-USER nginx
 COPY ./static /usr/share/nginx/html/static
 COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+
