--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -7,11 +7,10 @@ ENV DB_PASSWORD ${DB_PASSWORD:-dev}
 ENV DB_HOSTNAME ${DB_HOSTNAME:-phonebook-db}
 ENV API_SECRET_KEY ${API_SECRET_KEY:-mys3cr3tk3y}
 
-RUN adduser -D app
-USER app
+USER nobody
 WORKDIR /app
-COPY --chown=app:app requirements.txt requirements.txt
-COPY --chown=app:app source_code/ /app
+COPY --chown=nobody:nobody requirements.txt requirements.txt
+COPY --chown=nobody:nobody source_code/ /app
 
 RUN pip install --user -r requirements.txt
 
