--- a/default.conf
+++ b/default.conf
@@ -3,6 +3,7 @@ server {
         listen 80;
         server_name _;
         charset utf-8;
+        port_in_redirect off;
 
 location ~ ^/static/((css/|fonts/|js/).*)$ {
      alias /usr/share/nginx/html/static/$1;
@@ -10,8 +11,8 @@ location ~ ^/static/((css/|fonts/|js/).*)$ {
      expires max;
      charset UTF-8;
 }
-location / {
-        proxy_pass http://localhost:5000;
+location /(.*) {
+        proxy_pass http://localhost:5000/$1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
