--- a/default.conf
+++ b/default.conf
@@ -11,8 +11,10 @@ location ~ ^/static/((css/|fonts/|js/).*)$ {
      expires max;
      charset UTF-8;
 }
-location /(.*) {
-        proxy_pass http://localhost:5000/$1;
+location / {
+        proxy_redirect off;
+        proxy_set_header Host $host:$server_port;
+        proxy_pass http://localhost:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
