--- a/default.conf
+++ b/default.conf
@@ -14,10 +14,11 @@ location ~ ^/static/((css/|fonts/|js/).*)$ {
 location / {
         proxy_redirect off;
         proxy_set_header Host $host:$server_port;
-        proxy_pass http://localhost:5000;
+        proxy_set_header X-Forwarded-Host $http_host;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         client_max_body_size 5M;
+        proxy_pass http://127.0.0.1:5000;
         }
 }
