--- a/default.conf
+++ b/default.conf
@@ -12,7 +12,8 @@ location ~ ^/static/((css/|fonts/|js/).*)$ {
 }
 location / {
         proxy_redirect off;
-        proxy_set_header Host $host:$server_port;
+        proxy_set_header Host $http_host:$proxy_port;
+        #proxy_set_header Host $http_host:$server_port;
         proxy_set_header X-Forwarded-Host $http_host;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
