--- a/default.conf
+++ b/default.conf
@@ -11,9 +11,7 @@ location ~ ^/static/((css/|fonts/|js/).*)$ {
      charset UTF-8;
 }
 location / {
-        proxy_redirect off;
-        proxy_set_header Host $http_host:$proxy_port;
-        #proxy_set_header Host $http_host:$server_port;
+        proxy_set_header Host $http_host:$server_port;
         proxy_set_header X-Forwarded-Host $http_host;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
