Run python app with normal user

--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -11,4 +11,5 @@ WORKDIR /app
 COPY source_code/ /app
 RUN pip install --root-user-action=ignore -r requirements.txt
 
+USER nobody
 ENTRYPOINT ["python", "server.py"]
